force-app/main/default/objects/Account_Discount_History__c/Account_Discount_History__c.object-meta.xml
<CustomObject>
    <description>This object is the single source of truth for both the Account Tab and the CPQ Guidance logic. It stores the pre-calculated, aggregated history.</description>
    <label>Account Discount History</label>
    <nameField>
        <displayFormat>ADH-{00000}</displayFormat>
        <label>Account Discount History Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Account Discount History</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>