force-app/main/default/objects/Account_Discount_History__c/fields/Avg_Expansion_Discount__c.field-meta.xml
<CustomField>
    <fullName>Avg_Expansion_Discount__c</fullName>
    <label>Average Expansion Discount</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>