force-app/main/default/objects/Account_Discount_History__c/fields/Has_Been_Renewed__c.field-meta.xml
<CustomField>
    <fullName>Has_Been_Renewed__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>One or more of the initial bookings included in this Product ACV has expired and been renewed.</inlineHelpText>
    <label>Has Been Renewed</label>
    <type>Checkbox</type>
</CustomField>