force-app/main/default/objects/Account_Discount_History__c/fields/NE_ACV_Total__c.field-meta.xml
<CustomField>
    <fullName>NE_ACV_Total__c</fullName>
    <label>N/E ACV Total</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>