force-app/main/default/objects/Account_Discount_History__c/fields/Product__c.field-meta.xml
<CustomField>
    <fullName>Product__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Product Name</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Account_Discount_Histories</relationshipLabel>
    <relationshipName>Account_Discount_Histories</relationshipName>
    <type>Lookup</type>
</CustomField>