force-app/main/default/objects/Account_Discount_History__c/fields/Product_Category__c.field-meta.xml
<CustomField>
    <fullName>Product_Category__c</fullName>
    <formula>text(Product__r.Product_Type__c)</formula>
    <label>Product Category</label>
    <type>Text</type>
</CustomField>