force-app/main/default/objects/Account_Discount_History__c/fields/Product_Code__c.field-meta.xml
<CustomField>
    <fullName>Product_Code__c</fullName>
    <description>Printable Product Name</description>
    <label>Product Code</label>
    <length>100</length>
    <type>Text</type>
</CustomField>