force-app/main/default/objects/Account_Discount_History__c/fields/Total_Price_after_Add_Discount__c.field-meta.xml
<CustomField>
    <fullName>Total_Price_after_Add_Discount__c</fullName>
    <label>Total Price after Add. Discount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>